# serializer version: 1
# name: TestVisitorFieldSnapshots.test_excluded_fields_Action
  list([
    'bytecode',
    'bytecode_error',
    'embedding_last_synced_at',
    'embedding_version',
    'events',
    'is_calculating',
    'last_calculated_at',
    'last_summarized_at',
    'post_to_slack',
    'slack_message_format',
    'summary',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Cohort
  list([
    'count',
    'errors_calculating',
    'groups',
    'is_calculating',
    'last_calculation',
    'last_error_at',
    'pending_version',
    'people',
    'version',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Dashboard
  list([
    'analytics_dashboards',
    'data_color_theme',
    'data_color_theme_id',
    'is_shared',
    'last_accessed_at',
    'last_refresh',
    'share_token',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_DashboardTile
  list([
    'filters_hash',
    'last_refresh',
    'refresh_attempt',
    'refreshing',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Insight
  list([
    'dashboard',
    'dashboards',
    'dive_dashboard',
    'filters_hash',
    'last_modified_at',
    'last_refresh',
    'refresh_attempt',
    'refreshing',
    'short_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_excluded_fields_Text
  list([
    'last_modified_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Action
  list([
    'created_at',
    'deleted',
    'description',
    'name',
    'pinned_at',
    'steps_json',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Cohort
  list([
    'cohort_type',
    'created_at',
    'deleted',
    'description',
    'filters',
    'is_static',
    'last_calculation_duration_ms',
    'name',
    'query',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Dashboard
  list([
    'breakdown_colors',
    'created_at',
    'creation_mode',
    'deleted',
    'deprecated_tags',
    'deprecated_tags_v2',
    'description',
    'filters',
    'name',
    'pinned',
    'quick_filter_ids',
    'restriction_level',
    'variables',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_DashboardTile
  list([
    'color',
    'deleted',
    'filters_overrides',
    'layouts',
    'show_description',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Insight
  list([
    'color',
    'created_at',
    'deleted',
    'deprecated_tags',
    'deprecated_tags_v2',
    'derived_name',
    'description',
    'favorited',
    'filters',
    'is_sample',
    'layouts',
    'name',
    'order',
    'query',
    'query_metadata',
    'saved',
    'updated_at',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_primitive_fields_Text
  list([
    'body',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Action
  list([
    'created_by',
    'project',
    'survey_set',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Cohort
  list([
    'created_by',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Dashboard
  list([
    'created_by',
    'insights',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_DashboardTile
  list([
    'dashboard',
    'insight',
    'text',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Insight
  list([
    'created_by',
    'last_modified_by',
    'subscriptions_dashboard_export',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_relation_fields_Text
  list([
    'created_by',
    'last_modified_by',
    'team',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Action
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '__str__',
    '_meta',
    'action_steps',
    'bytecode',
    'bytecode_error',
    'created_by_id',
    'embedding_last_synced_at',
    'embedding_version',
    'events',
    'get_analytics_metadata',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_created_at',
    'get_next_by_last_calculated_at',
    'get_next_by_updated_at',
    'get_previous_by_created_at',
    'get_previous_by_last_calculated_at',
    'get_previous_by_updated_at',
    'get_step_events',
    'id',
    'is_calculating',
    'last_calculated_at',
    'last_summarized_at',
    'plugin_configs',
    'post_to_slack',
    'project_id',
    'refresh_bytecode',
    'save',
    'slack_message_format',
    'steps',
    'summary',
    'tagged_items',
    'team_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Cohort
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '__repr__',
    '__str__',
    '_get_uuids_for_distinct_ids_batch',
    '_get_uuids_for_emails_batch',
    '_get_uuids_for_emails_batch_ch',
    '_get_uuids_for_emails_batch_pg',
    '_insert_users_list_with_batching',
    '_meta',
    '_safe_reset_calculating_state',
    '_safe_save_cohort_state',
    'calculate_people_ch',
    'cohortcalculationhistory_set',
    'cohortpeople_set',
    'count',
    'created_by_id',
    'enqueue_calculation',
    'errors_calculating',
    'errortrackingissuecohort_set',
    'experiment_set',
    'get_analytics_metadata',
    'get_cohort_type_display',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'groups',
    'id',
    'insert_users_by_email',
    'insert_users_by_list',
    'insert_users_list_by_uuid',
    'insert_users_list_by_uuid_into_pg_only',
    'is_calculating',
    'last_calculation',
    'last_error_at',
    'objects',
    'pending_version',
    'people',
    'properties',
    'remove_user_by_uuid',
    'team_id',
    'to_dict',
    'version',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Dashboard
  list([
    'CreationMode',
    'DoesNotExist',
    'MultipleObjectsReturned',
    'PrivilegeLevel',
    'RestrictionLevel',
    '__annotations__',
    '__doc__',
    '__module__',
    '__repr__',
    '__str__',
    '_meta',
    'analytics_dashboards',
    'annotation_set',
    'created_by_id',
    'data_color_theme',
    'data_color_theme_id',
    'delete',
    'exportedasset_set',
    'featureflag_set',
    'featureflagdashboards_set',
    'get_analytics_metadata',
    'get_creation_mode_display',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_created_at',
    'get_previous_by_created_at',
    'get_restriction_level_display',
    'grouptypemapping_set',
    'id',
    'insight_set',
    'is_shared',
    'is_sharing_enabled',
    'items',
    'last_accessed_at',
    'last_refresh',
    'objects',
    'objects_including_soft_deleted',
    'primary_dashboard_teams',
    'privileges',
    'share_token',
    'sharingconfiguration_set',
    'subscription_set',
    'tagged_items',
    'team_id',
    'tiles',
    'url',
    'userscenepersonalisation_set',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_DashboardTile
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__annotations__',
    '__doc__',
    '__module__',
    '_meta',
    'caching_state',
    'caching_states',
    'clean',
    'copy_to_dashboard',
    'dashboard_id',
    'dashboard_queryset',
    'filters_hash',
    'id',
    'insight_id',
    'last_refresh',
    'objects',
    'objects_including_soft_deleted',
    'refresh_attempt',
    'refreshing',
    'save',
    'sort_tiles_by_layout',
    'text_id',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Insight
  list([
    'DoesNotExist',
    'MATERIAL_INSIGHT_FIELDS',
    'MultipleObjectsReturned',
    '__annotations__',
    '__doc__',
    '__init__',
    '__module__',
    '__repr__',
    '__str__',
    '_meta',
    'alert_set',
    'alertconfiguration_set',
    'annotation_set',
    'are_alerts_supported',
    'caching_state',
    'caching_states',
    'created_by_id',
    'customerjourney_set',
    'dashboard',
    'dashboard_filters',
    'dashboard_id',
    'dashboard_tiles',
    'dashboards',
    'dive_dashboard',
    'dive_dashboard_id',
    'exportedasset_set',
    'filters_hash',
    'funnel',
    'generate_query_metadata',
    'get_effective_query',
    'get_file_system_representation',
    'get_file_system_unfiled',
    'get_next_by_last_modified_at',
    'get_next_by_updated_at',
    'get_previous_by_last_modified_at',
    'get_previous_by_updated_at',
    'id',
    'insightviewed_set',
    'is_sharing_enabled',
    'last_modified_at',
    'last_modified_by_id',
    'last_refresh',
    'objects',
    'objects_including_soft_deleted',
    'query_from_filters',
    'refresh_attempt',
    'refreshing',
    'save',
    'sharingconfiguration_set',
    'short_id',
    'show_legend',
    'subscription_set',
    'surveys_linked_insight',
    'tagged_items',
    'team_id',
    'threshold_set',
    'type',
    'url',
  ])
# ---
# name: TestVisitorFieldSnapshots.test_skipped_fields_Text
  list([
    'DoesNotExist',
    'MultipleObjectsReturned',
    '__doc__',
    '__module__',
    '_meta',
    'created_by_id',
    'dashboard_tiles',
    'get_next_by_last_modified_at',
    'get_previous_by_last_modified_at',
    'id',
    'last_modified_at',
    'last_modified_by_id',
    'objects',
    'team_id',
  ])
# ---
